# FSO_2022_2

./: README.md
Atividades/: CMakeLists.txt  FIFO_algoritmo_reposicao_paginas.c  OPT_algoritmo_reposicao_paginas.c  arquivosIdenticos.c  preencheArquivos.c  quasePrimosMalucos.c  testeLRU.c  timed_mini_shell.c  trabalho1_bibliotecas_dinamicas.c  trabalho1_parametros_linha_de_comando.c  trabalho2_processo_preguicoso.c  trabalho2_vetores_identicos.c
